feat adjusting arrangement game stage, game messages
Game messages - elements of PlayfieldDerails, that describes game
situations and appropriate text after each turn.

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,3 +1,8 @@
 $pen-color: #10123b;
+$success: #107946;
+$dark-success: #026430;
+$info: #1452bd;
 $error: #9a2a2a;
+$light-error: #bb2727;
 $dark-error: #4a0e0e;
+$warn: #d4762d;
