--- a/components/Playfield/components/PlayfieldDetails/styles.scss
+++ b/components/Playfield/components/PlayfieldDetails/styles.scss
@@ -11,23 +11,41 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-inline: 26px;
   box-sizing: border-box;
+  padding-inline: 10px;
+  @include xl {
+    padding-inline: 14px;
+  }
+  @include xxl {
+    padding-inline: 20px;
+  }
+  @include xxxl {
+    padding-inline: 26px;
+  }
 }
 .info {
-  margin-right: 8px;
+  margin-right: pxrem(8);
   position: relative;
-  top: 8px;
-  @include fixedSize(32px);
+  top: pxrem(8);
   @include bold-filter($pen-color, $bold: false);
+  @include fixedSize(20px);
+  @include xl {
+    @include fixedSize(24px);
+  }
+  @include xxl {
+    @include fixedSize(28px);
+  }
+  @include xxxl {
+    @include fixedSize(32px);
+  }
 }
 .text,
 .results {
   align-items: center;
   gap: 4px;
-  line-height: 32px;
-  font-size: 24px;
-  margin: 0 0 20px 0;
+  line-height: pxrem(32);
+  font-size: pxrem(24);
+  margin: 0 0 pxrem(20) 0;
   & span {
     @include bold-filter;
   }
@@ -89,12 +107,24 @@
 }
 .fightButton {
   align-self: center;
-  min-width: 150px;
-  margin-top: 20px;
+  margin-top: 8px;
+  min-width: 100px;
+  @include xl {
+    margin-top: 10px;
+    min-width: 110px;
+  }
+  @include xxl {
+    margin-top: 14px;
+    min-width: 130px;
+  }
+  @include xxxl {
+    margin-top: 20px;
+    min-width: 150px;
+  }
 }
 .energomoduleContainer {
   width: 50%;
-  height: 100px;
+  height: pxrem(100);
   margin: 0 auto;
   position: relative;
   mix-blend-mode: darken;
